--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+absl-py==1.0.0
 apt-clone==0.2.1
 apturl==0.5.2
+asttokens==2.0.5
+astunparse==1.6.3
+backcall==0.2.0
 bcrypt==3.1.7
 blinker==1.4
 Brlapi==0.7.0
+cachetools==5.0.0
 certifi==2019.11.28
 chardet==3.0.4
 chrome-gnome-shell==0.0.0
@@ -13,43 +18,69 @@ cryptography==2.8
 cupshelpers==1.0
 cycler==0.11.0
 dbus-python==1.2.16
+decorator==5.1.1
 defer==1.0.6
 distro==1.4.0
 distro-info===0.23ubuntu1
 duplicity==0.8.12.0
 entrypoints==0.3
+executing==0.8.3
 fasteners==0.14.1
+flatbuffers==2.0
 fonttools==4.28.5
 future==0.18.2
+gast==0.5.3
+google-auth==2.6.6
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.46.0
+h5py==3.6.0
 httplib2==0.14.0
 idna==2.8
+importlib-metadata==4.11.3
+ipython==8.3.0
+jedi==0.18.1
+keras==2.8.0
+Keras-Preprocessing==1.1.2
 keyring==18.0.1
 kiwisolver==1.3.2
 language-selector==0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
+libclang==14.0.1
 lockfile==0.12.2
 louis==3.12.0
 macaroonbakery==1.3.1
 Mako==1.1.0
+Markdown==3.3.7
 MarkupSafe==1.1.0
 matplotlib==3.5.1
+matplotlib-inline==0.1.3
 MDSplus==7.131.6
 monotonic==1.5
 netifaces==0.10.4
 numpy==1.22.1
 oauthlib==3.1.0
 olefile==0.46
+opt-einsum==3.3.0
 packaging==21.3
 PAM==0.4.2
 paramiko==2.6.0
+parso==0.8.3
 pexpect==4.6.0
+pickleshare==0.7.5
 Pillow==7.0.0
-protobuf==3.6.1
+prompt-toolkit==3.0.29
+protobuf==3.20.1
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycairo==1.16.2
 pycryptodomex==3.14.1
 pycups==1.9.73
+pydot==1.4.2
+Pygments==2.12.0
 PyGObject==3.36.0
 PyICU==2.4.2
 PyJWT==1.7.1
@@ -65,15 +96,26 @@ pyxdg==0.26
 PyYAML==5.3.1
 reportlab==3.5.34
 requests==2.22.0
+requests-oauthlib==1.3.1
 requests-unixsocket==0.2.0
+rsa==4.8
 samloader==0.4
 scipy==1.7.3
 screen-resolution-extra==0.0.0
 SecretStorage==2.3.1
 simplejson==3.16.0
 six==1.14.0
+stack-data==0.2.0
 systemd-python==234
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.8.0
+tensorflow-io-gcs-filesystem==0.25.0
+termcolor==1.1.0
+tf-estimator-nightly==2.8.0.dev2021122109
 tqdm==4.63.0
+traitlets==5.1.1
+typing-extensions==4.2.0
 ubuntu-advantage-tools==27.6
 ubuntu-drivers-common==0.0.0
 ufw==0.36
@@ -81,4 +123,8 @@ unattended-upgrades==0.1
 urllib3==1.25.8
 usb-creator==0.3.7
 wadllib==1.3.3
+wcwidth==0.2.5
+Werkzeug==2.1.2
+wrapt==1.14.1
 xkit==0.0.0
+zipp==3.8.0
